--- a/randomForest/package.json
+++ b/randomForest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forest",
+  "name": "demo",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Kraken <kurbakovila@gmail.com>",
@@ -10,8 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue2-storage": "^3.4.0",
+    "vuelidate": "^0.7.4",
+    "vuetify": "^1.5.5",
+    "vuetify-loader": "^1.2.1",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
