--- a/randomForest/package.json
+++ b/randomForest/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^2.8.0",
     "vue": "^2.5.2",
     "vue-chartjs": "^3.4.2",
+    "vue-ref": "^1.0.6",
     "vue-router": "^3.0.1",
     "vue2-storage": "^3.4.0",
     "vuelidate": "^0.7.4",
