--- a/randomForest/package.json
+++ b/randomForest/package.json
@@ -16,6 +16,7 @@
     "vue-chartjs": "^3.4.2",
     "vue-ref": "^1.0.6",
     "vue-router": "^3.0.1",
+    "vue-yandex-maps": "^0.8.3",
     "vue2-storage": "^3.4.0",
     "vuelidate": "^0.7.4",
     "vuetify": "^1.5.5",
